[package]
name = "rustlabconf"
version = "0.1.0"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
env_logger = "0.7"